Navbar collapsed button color fixed

--- a/css/style.css
+++ b/css/style.css
@@ -382,13 +382,20 @@ body {
     color: #5F002B;
 }
 
-
-.navbar-toggler {
-    border-color: #5F002B;
-}
-
 .nav-logo {
     padding-left: 27px;
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(95,0,43, 0.9)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+  
+.navbar-toggler {
+    border-color: rgb(95,0,43);
+}
+
+.navbar-toggler:focus {
+    box-shadow: 0 0 0 3px rgba(95, 0, 43, 1);;
 }
 
 .menu-titlebox {
